[package]
name = "kullback-wasm"
version = "0.1.0"
authors = ["corgo"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
plotters = {version="0.3.7", features = ["line_series"]}
base64 = "0.22.1"
base16ct = { version = "0.2.0", features = ["alloc", "std"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = {version="0.3.77", features = ["HtmlCanvasElement"]}
plotters-canvas = "0.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
wasm-opt = ['-O4', '-g']

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
